<resources>
    <string name="app_name">Cấp phát văn phòng phẩm</string>
    <string name="mnExit">Exit</string>
    <string name="mnLang">Language</string>
    <string name="tenVPP">Tên VPP :</string>
    <string name="dvtVPP">Đơn vị tính :</string>
    <string name="gnVPP">Giá nhập :</string>
    <string name="nhapVPP">Thêm Văn Phòng Phẩm</string>
    <string name="nhaptenVPP">Nhập vào tên văn phòng phẩm</string>
    <string name="nhapdvtVPP">Nhập vào đơn vị tính</string>
    <string name="nhapgnVPP">Nhập vào giá nhập của văn phòng phẩm</string>
    <string name="btnThem">Thêm</string>
    <string name="btnXoa">Xóa</string>
    <string name="btnSua">Sửa</string>
    <string name="btnClear">Clear</string>
    <string name="thongtin">Thông tin</string>
    <string name="chucnang">Chức năng</string>
    <string name="nhapPB">Thêm Phòng Ban</string>
    <string name="tenPB">Tên PB :</string>
    <string name="nhaptenPB">Nhập vào tên phòng ban</string>
    <string name="nhapNV">Thêm Nhân Viên</string>
    <string name="tenNV">Tên NV :</string>
    <string name="nhaptenNV">Nhập vào tên nhân viên</string>
    <string name="nhapNgSinhNV">Nhập vào ngày sinh nhân viên</string>
    <string name="NgSinhNV">Ngày Sinh NV :</string>
    <string name="capnhatVPP">Cập Nhật Văn Phòng Phẩm</string>
    <string name="ngayCapVPP">Ngày cấp :</string>
    <string name="nhapNgCapVPP">Nhập vào ngày cấp</string>
    <string name="nhapSlVPP">Nhập vào số lượng</string>
    <string name="maVPP">Mã VPP :</string>
    <string name="maPB">Mã PB :</string>
    <string name="show">Show văn phòng phẩm</string>
    <string name="maNV">Mã NV :</string>
    <string name="soPhieuVPP">Số phiếu :</string>
    <string name="soLuongCnVPP">Số lượng :</string>
    <string name="btnThemVPP">Thêm Văn phòng phẩm</string>
    <string name="btnThemPB">Thêm Phòng Ban</string>
    <string name="btnThemNV">Thêm Nhân Viên</string>
    <string name="btnCapNhatVPP">Cập Nhật Văn Phòng Phẩm</string>
    <string name="nhapmaVPP">Nhập vào mã vpp</string>
    <string name="showvpp">Danh Sách Văn Phòng Phẩm</string>
    <string name="btnIndex">Trang Chủ</string>
    <string name="btnShowGrid">Show Grit</string>
    <string name="btnShowRecy">Show Recycler</string>
    <string name="showpb">Danh Sách Phòng Ban</string>
    <string name="showcnvpp">Cập nhật văn phòng phẩm</string>
    <string name="nhapMaPB">Nhập vào mã phòng ban</string>
    <string name="nhapMaNV">Nhập vào mã nhân viên</string>
    <string name="nhapSopVPP">Nhập vào số phiếu</string>
    <string name="shownv">Danh Sách Nhân Viên</string>
    <string name="edttk">Nhập vào mã cần tìm</string>
    <string name="edttkvpp">Nhập vào số phiếu cần tìm</string>
    <string name="btnVPP">Văn phòng phẩm</string>
    <string name="btnPB">Phòng ban</string>
    <string name="btnNV">Nhân viên</string>
    <string name="btnCapNhat">Cập nhật</string>
</resources>
