<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.MainCapnhatVPP">

    <TextView
        style="@style/textTile"
        android:text="@string/capnhatVPP" />

    <TextView
        style="@style/textContent"
        android:text="@string/thongtin" />

    <LinearLayout style="@style/LN_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soPhieuVPP"
            android:textColor="@color/coloradd" />

        <EditText
            android:id="@+id/edtsophieuVPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapSopVPP" />
    </LinearLayout>

    <LinearLayout style="@style/LN_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngayCapVPP"
            android:textColor="@color/coloradd" />

        <EditText
            android:id="@+id/edtNgCapVPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapNgCapVPP" />
    </LinearLayout>

    <LinearLayout style="@style/LN_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maVPP"
            android:textColor="@color/coloradd" />

        <Spinner
            android:id="@+id/spMaVPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"></Spinner>
    </LinearLayout>

    <LinearLayout style="@style/LN_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maNV"
            android:textColor="@color/coloradd" />

        <Spinner
            android:id="@+id/spManv_VPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"></Spinner>
    </LinearLayout>

    <LinearLayout style="@style/LN_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soLuongCnVPP"
            android:textColor="@color/coloradd" />

        <EditText
            android:id="@+id/edtSlVPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapSlVPP" />
    </LinearLayout>

    <TextView
        android:text="@string/chucnang"
        style="@style/textContent" />

    <LinearLayout
        style="@style/LN_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnThemCnVPP"
            style="@style/btnThem" />

        <Button
            android:id="@+id/btnXoaCnVPP"
            style="@style/btnXoa" />

        <Button
            android:id="@+id/btnSuaCnVPP"
            style="@style/btnSua" />

        <Button
            android:id="@+id/btnClearCnVPP"
            style="@style/btnClear" />
    </LinearLayout>

</LinearLayout>