<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.Main4">
    <TextView
        android:text="@string/showcnvpp"
        style="@style/textContent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtTKCNVPP"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edttkvpp"/>
        <Button
            android:id="@+id/btnTKCNVPP"
            android:background="@drawable/ic_search_black_24dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ListView
        android:id="@+id/lvCNVPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorlv"
        ></ListView>
    <LinearLayout
        style="@style/LN_horizontal">
        <Button
            android:id="@+id/btnThem_cnvpp"
            style="@style/btnTable"
            android:layout_weight="1"
            android:text="@string/btnCapNhatVPP"/>

        <Button
            android:id="@+id/btnDSCNVPP_GoIndex"
            style="@style/btnTable"
            android:layout_weight="1"
            android:text="@string/btnIndex"/>
    </LinearLayout>
</LinearLayout>