<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.Main1">
    <TextView
        android:text="@string/showvpp"
        style="@style/textContent" />

    <ListView
        android:id="@+id/lvVPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorlv"
        ></ListView>
    <LinearLayout
        style="@style/LN_horizontal">
        <Button
            android:id="@+id/btnThem_vpp"
            style="@style/btnTable"
            android:layout_weight="1"
            android:text="@string/btnThemVPP"/>
        <Button
            android:id="@+id/btnDSVPP_GoIndex"
            style="@style/btnTable"
            android:layout_weight="1"
            android:text="@string/btnIndex"/>
    </LinearLayout>
</LinearLayout>