<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imgCnVPP"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_vietnam" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/nen"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soPhieuVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvSoPhieuVPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="60dp"
                android:text="SP - 1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngayCapVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvNgCVPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="54dp"
                android:text="25/3/2000"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvMaVPP_VPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="63dp"
                android:text="VPP - 1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maNV"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvMaNV_VPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="71dp"
                android:text="NV - 1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soLuongCnVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvSoLuongCnVPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="58dp"
                android:text="50"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>