<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imgNV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_vietnam" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/nen"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maNV"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvMaNV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="70dp"
                android:text="NV - 1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenNV"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvTenNV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="67dp"
                android:text="Nguyễn Văn a"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NgSinhNV"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvNgSinhNV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="25dp"
                android:text="2/4/1993"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maPB"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvMaPB_NV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="70dp"
                android:text="PB - 1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>