<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgVPP"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_vietnam" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/nen"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvMaVPP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="60dp"
                android:text="VPP - 1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvTenVPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="58dp"
                android:text="but chi"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dvtVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvDvtVPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="46dp"
                android:text="5"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout style="@style/LN_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gnVPP"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvGnVPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="54dp"
                android:text="50000"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>